# fdsBuilder

./: .env.example  .gitignore  building_config.json  case1.json  case2.json  example.json  main.py  proj_outline.md  pyproject.toml  requiements.txt
generators/: fds_generator.py
models/: building.py  combustibles.py  facility.py  industiral.json  industrial.json  materials.py
ocr/: blueprint_ocr.py
ui/: blueprint_viewer.py  dialogs.py  fds_preview.py  mainwindow.py  param_panel.py  styles.py  viewer_3d.py
